force-app/main/default/objects/Title__c/Title__c.object-meta.xml
<CustomObject>
    <description>A Single Movie Title.</description>
    <label>Title</label>
    <nameField>
        <label>Title Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Titles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>