force-app/main/default/objects/Title__c/fields/AvailableStock__c.field-meta.xml
<CustomField>
    <fullName>AvailableStock__c</fullName>
    <description>Count of Available Stock</description>
    <label>Available Stock</label>
    <summaryFilterItems>
        <field>Stock__c.Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>Stock__c.Title__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>