force-app/main/default/objects/Title__c/fields/IsFeatured__c.field-meta.xml
<CustomField>
    <fullName>IsFeatured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the movie is a featured title on the platform.</description>
    <label>Is Featured</label>
    <type>Checkbox</type>
</CustomField>