force-app/main/default/objects/Title__c/fields/PosterURL__c.field-meta.xml
<CustomField>
    <fullName>PosterURL__c</fullName>
    <description>URL to the Movie Poster</description>
    <label>Poster URL</label>
    <type>Url</type>
</CustomField>