force-app/main/default/objects/Title__c/fields/ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>ReleaseDate__c</fullName>
    <description>The Date the Title was released in the US.</description>
    <label>Release Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>