force-app/main/default/objects/Title__c/fields/RentedStock__c.field-meta.xml
<CustomField>
    <fullName>RentedStock__c</fullName>
    <label>Rented Stock</label>
    <summaryFilterItems>
        <field>Stock__c.Status__c</field>
        <operation>equals</operation>
        <value>Rented</value>
    </summaryFilterItems>
    <summaryForeignKey>Stock__c.Title__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>