force-app/main/default/objects/Title__c/fields/TotalStock__c.field-meta.xml
<CustomField>
    <fullName>TotalStock__c</fullName>
    <description>Count of Total Stock of this Title.</description>
    <label>Total Stock</label>
    <summaryForeignKey>Stock__c.Title__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>