force-app/main/default/objects/Title__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Genre__c</columns>
    <columns>ReleaseDate__c</columns>
    <columns>AvailableStock__c</columns>
    <columns>TotalStock__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>