force-app/main/default/objects/Title__c/listViews/Low_Stock.listView-meta.xml
<ListView>
    <fullName>Low_Stock</fullName>
    <columns>NAME</columns>
    <columns>Genre__c</columns>
    <columns>ReleaseDate__c</columns>
    <columns>AvailableStock__c</columns>
    <columns>TotalStock__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AvailableStock__c</field>
        <operation>lessOrEqual</operation>
        <value>3</value>
    </filters>
    <label>Low Stock</label>
</ListView>